# ecs-experiment

./: Cargo.toml
crates/ecs/: Cargo.toml
crates/ecs/src/: component.rs  entity.rs  error.rs  event.rs  filter.rs  lib.rs  query.rs  resource.rs  scheduler.rs  state.rs  system.rs  test.rs  util.rs  world.rs
crates/ecs_derive/: Cargo.toml
crates/ecs_derive/src/: lib.rs
src/: component.rs  entity.rs  event.rs  filter.rs  lib.rs  query.rs  resource.rs  scheduler.rs  system.rs  test.rs  world.rs
