[package]
name = "ecs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dashmap = "5.4.0"
futures = "0.3.30"
parking_lot = "0.12.1"
tokio = { version = "1.25.0", features = ["rt", "rt-multi-thread", "macros", "sync", "time"] }
bitvec = "1.0.1"
thiserror = "1.0.63"

ecs_derive = { path = "../ecs_derive" }
nohash-hasher = "0.2.0"
